--- a/src/server/templates/remsens/client_list.html
+++ b/src/server/templates/remsens/client_list.html
@@ -10,18 +10,18 @@
   <p> <b>Tutti i membri dell'organizzazione:</b> {%for user in myorg.userprofile_set.all %} {{ user }} {% endfor %}</p>
 
       {%for client in myorg.client_set.all %}
-      <b>Dispositivo:</b> <b><a href="{% url 'my_client' client_id=client.uuid %}">{{ client.name }}</a></b></br>
-      <b>UUID:</b> {{client.uuid}}</br>
+      <b>Dispositivo:</b> <b><a href="{% url 'my_client' client_id=client.uuid %}">{{ client.name }}</a></b><br>
+      <b>UUID:</b> {{client.uuid}}<br>
 
-      <b style="padding-left: 1em;"> Sensori:</b> </br>
+      <b style="padding-left: 1em;"> Sensori:</b> <br>
       {% for sensor in client.sensor_set.all %}
       <b style="padding-left: 1.5em;">nome</b> <a href="{% url 'my_sensor' sensor_id=sensor.uuid %}">{{ sensor.description }}</a>, <b>UUID</b>: {{ sensor.uuid}}
 
-      </br>
+      <br>
 
       {% endfor %} {%endfor%}
 
-      </br>
+      <br>
 
 
 </div>
